--- a/mybatis3/src/main/webapp/index.html
+++ b/mybatis3/src/main/webapp/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 	<h3>안녕하세요. 배서진입니다!</h3>
-	<a href='MemberAddServlet'>서블릿페이지로 이동</a>
-	<a href='MemberListServlet'>회원목록 서블릿으로 이동</a>
+	<a href='html/MemberAddServlet'>서블릿페이지로 이동</a><br>
+	<a href='html/MemberListServlet'>회원목록 서블릿으로 이동</a>
 	<p>1.서블릿 생성.</p>
 	<p>2.매퍼호출</p>
 	<p>3.response.getWriter()를 활용해서 목록그리기</p>
